[gd_scene load_steps=22 format=3 uid="uid://d1qoas5kwqj1n"]

[ext_resource type="Texture2D" uid="uid://q2gn568u8qi3" path="res://assets/sprites/enemySprites/enemy_1.png" id="1_5otrj"]
[ext_resource type="Script" path="res://assets/scripts/enemyScripts/enemy.gd" id="1_xsx5n"]
[ext_resource type="PackedScene" uid="uid://8nw6luhhkyku" path="res://assets/scenes/areaFunctions/hurtbox.tscn" id="3_kase7"]
[ext_resource type="PackedScene" uid="uid://bh5yx8khqtcmt" path="res://assets/scenes/areaFunctions/hitbox.tscn" id="4_b7wsr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrdjc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iyucl"]
bg_color = Color(0.862374, 0, 0.0692985, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_48abw"]
atlas = ExtResource("1_5otrj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_torxo"]
atlas = ExtResource("1_5otrj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg3dx"]
atlas = ExtResource("1_5otrj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_miv31"]
atlas = ExtResource("1_5otrj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnc1a"]
atlas = ExtResource("1_5otrj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0n4q"]
atlas = ExtResource("1_5otrj")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug6pp"]
atlas = ExtResource("1_5otrj")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjbmi"]
atlas = ExtResource("1_5otrj")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1idmj"]
atlas = ExtResource("1_5otrj")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_02aej"]
atlas = ExtResource("1_5otrj")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqmtv"]
atlas = ExtResource("1_5otrj")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xmpdp"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48abw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_torxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg3dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miv31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnc1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0n4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug6pp")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjbmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1idmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02aej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqmtv")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bhum1"]
radius = 6.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5sscd"]
radius = 6.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_islau"]
radius = 6.0
height = 14.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 263
script = ExtResource("1_xsx5n")

[node name="healthBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -18.0
offset_right = 10.0
offset_bottom = -14.0
theme_override_styles/background = SubResource("StyleBoxFlat_lrdjc")
theme_override_styles/fill = SubResource("StyleBoxFlat_iyucl")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_xmpdp")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_bhum1")

[node name="hurtbox" parent="." instance=ExtResource("3_kase7")]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_5sscd")

[node name="hitbox" parent="." groups=["enemyHitbox"] instance=ExtResource("4_b7wsr")]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_islau")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(5, -8)
target_position = Vector2(0, 26)
collision_mask = 768
hit_from_inside = true
collide_with_areas = true

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="hurtbox"]
[editable path="hitbox"]
